projet-etudiants/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: edumanager.local
      http:
        paths:
          - path: /api/etudiants
            pathType: Prefix
            backend:
              service:
                name: etudiant-service
                port:
                  number: 8081
          - path: /api/departements
            pathType: Prefix
            backend:
              service:
                name: etudiant-service
                port:
                  number: 8081
          - path: /api/notes
            pathType: Prefix
            backend:
              service:
                name: grading-service
                port:
                  number: 8082
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
